Updated code to process FARO and original WebNLG data, and combine them into one dataset

--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -531,7 +531,7 @@
     "import pandas as pd\n",
     "from rdflib.plugins.sparql import prepareQuery\n",
     "from rdflib import Graph, URIRef\n",
-    "from resources import uri_validator, mapping_dict"
+    "from resources import uri_validator"
    ],
    "metadata": {
     "collapsed": false,
@@ -647,23 +647,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "# Get all the ID's for the subject from the original data\n",
+    "from resources import MappingDict\n",
+    "import json\n",
+    "\n",
+    "def gen_mapping_dict(*args):\n",
+    "    total_instances = 0\n",
+    "    \"\"\"\n",
+    "    :param args: paths to the jointGT files\n",
+    "    :return: the mapping dictionary\n",
+    "    \"\"\"\n",
+    "    encoding_dict = {}\n",
+    "    filepaths = [*args]\n",
+    "    for dataset in filepaths:\n",
+    "        dataset = json.load(open(dataset))\n",
+    "        total_instances += len(dataset)\n",
+    "\n",
+    "        for instance in dataset:\n",
+    "\n",
+    "            for key, value in instance['kbs'].items():\n",
+    "                encoding_dict[value[0]] = key\n",
+    "\n",
+    "    encoding_dict = MappingDict(encoding_dict)\n",
+    "    print(f\"Processed {total_instances} instances\")\n",
+    "\n",
+    "    return encoding_dict, total_instances"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 16095 instances\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoding_dict, total_instances = gen_mapping_dict('..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\train.json', '..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\val.json', '..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\test.json')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "import json\n",
+    "from resources import MappingDict\n",
+    "import pandas as pd\n",
     "\n",
-    "def gen_jointgt_input_format(data, output_file, subj_col= 'subject_values', rel_col= 'predicate', obj_col= 'object_values', sent_col = None, single_event = True):\n",
-    "    mapping_ids = mapping_dict(data[subj_col].to_list()) #Generate unique ID's per word\n",
+    "def gen_jointgt_input_format(data, output_file, encoding_dict= None, subj_col= 'subject_values', rel_col= 'predicate', obj_col= 'object_values', sent_col = None, single_event = True, start_id = 0):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param data: The dataset to process\n",
+    "    :param output_file: The name of the output file (.json should be added)\n",
+    "    :param encoding_dict: The dictionary containing the encodings for the words\n",
+    "    :param subj_col: The column that contains the subject\n",
+    "    :param rel_col: The column that contains the relation\n",
+    "    :param obj_col: The column that contains the object\n",
+    "    :param sent_col: The column that contains the sentence\n",
+    "    :param single_event: If the data is a single event, or each row should be seen as a single event\n",
+    "    :param start_id: the instance ID from which the count should start\n",
+    "    :return: the number of processed instances\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if encoding_dict == None:\n",
+    "        encoding_dict = MappingDict()\n",
+    "        encoding_dict.add_words(data[subj_col].to_list()) #Generate unique ID's per word\n",
+    "\n",
+    "    else:\n",
+    "        encoding_dict.add_words(data[subj_col].to_list())\n",
     "\n",
     "    full_data = []\n",
     "    kbs = {}\n",
+    "    data = data.reset_index(drop=True)\n",
     "    for index, row in data.iterrows():\n",
-    "        subj_id = f\"W{mapping_ids[row[subj_col]]}\"\n",
+    "        subj_id = encoding_dict.encoding_dict[row[subj_col]]\n",
     "        relation = row[rel_col].split('/')[-1]\n",
     "        kbs[subj_id] = [row[subj_col], row[subj_col], [[relation, str(row[obj_col])]]]\n",
     "\n",
     "        if single_event == False:\n",
-    "            json_dict = {\"id\": index,\n",
+    "            json_dict = {\"id\": start_id +index,\n",
     "                         \"kbs\": kbs,\n",
     "                         \"text\": [row[sent_col]]}\n",
     "            full_data.append(json_dict)\n",
@@ -677,7 +759,10 @@
     "\n",
     "    with open(output_file, \"w\") as json_out:\n",
     "\n",
-    "        json.dump(full_data, json_out, indent = 2)"
+    "        json.dump(full_data, json_out, indent = 2)\n",
+    "\n",
+    "    print(f\"Processed {len(data)} instances\")\n",
+    "    return len(data)"
    ],
    "metadata": {
     "collapsed": false,
@@ -688,13 +773,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "outputs": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 1800 instances\n",
+      "Processed 201 instances\n",
+      "Processed 95 instances\n"
+     ]
+    }
+   ],
    "source": [
     "#Now convert rebel relationship data to JointGT input format\n",
     "\n",
-    "relation_data = pd.read_csv('Data/rebel_v2/data/new_split/train.csv', index_col=0)\n",
-    "gen_jointgt_input_format(relation_data, 'relation_dataset_jointgt.json', 'trigger1', 'label', 'trigger2', 'sentence', single_event= False)"
+    "relation_data_train = pd.read_csv('Data/rebel_v2/data/new_split/train.csv', index_col=0)\n",
+    "relation_data_val = pd.read_csv('Data/rebel_v2/data/new_split/val.csv', index_col=0)\n",
+    "relation_data_test = pd.read_csv('Data/rebel_v2/data/new_split/test.csv', index_col=0)\n",
+    "\n",
+    "total_instances += gen_jointgt_input_format(relation_data_train, 'Data/jointGT/faro/relation_dataset_jointgt_train.json', encoding_dict, 'trigger1', 'label', 'trigger2', 'sentence', single_event= False, start_id=total_instances)\n",
+    "total_instances += gen_jointgt_input_format(relation_data_val, 'Data/jointGT/faro/relation_dataset_jointgt_val.json', encoding_dict, 'trigger1', 'label', 'trigger2', 'sentence', single_event= False, start_id= total_instances)\n",
+    "total_instances += gen_jointgt_input_format(relation_data_test, 'Data/jointGT/faro/relation_dataset_jointgt_test.json', encoding_dict, 'trigger1', 'label', 'trigger2', 'sentence', single_event= False, start_id= total_instances)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "dataset_gen = json.load(open('Data\\\\jointGT\\\\faro\\\\relation_dataset_jointgt_train.json'))\n",
+    "dataset_jointgt = json.load(open('..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\train.json'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [],
+   "source": [
+    "#Next step: Combine both the original WebNLG data with the newly generated one\n",
+    "import random\n",
+    "def combine_datasets(dataset1, dataset2, output_file):\n",
+    "    dataset1 = json.load(open(dataset1))\n",
+    "    dataset2 = json.load(open(dataset2))\n",
+    "\n",
+    "    combined = dataset1+dataset2\n",
+    "    random.shuffle(combined)\n",
+    "\n",
+    "    with open(output_file, \"w\") as json_out:\n",
+    "        json.dump(combined, json_out, indent = 2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [],
+   "source": [
+    "combine_datasets('Data\\\\jointGT\\\\faro\\\\relation_dataset_jointgt_train.json', '..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\train.json', 'Data\\\\jointGT\\\\combined\\\\combined_train.json')\n",
+    "combine_datasets('Data\\\\jointGT\\\\faro\\\\relation_dataset_jointgt_val.json', '..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\val.json', 'Data\\\\jointGT\\\\combined\\\\combined_val.json')\n",
+    "combine_datasets('Data\\\\jointGT\\\\faro\\\\relation_dataset_jointgt_test.json', '..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\test.json', 'Data\\\\jointGT\\\\combined\\\\combined_test.json')"
    ],
    "metadata": {
     "collapsed": false,
