Updated code for statistics. Moved some code, and wrote small documentations to some functions.

--- a/mapping_rebel_data.ipynb
+++ b/mapping_rebel_data.ipynb
@@ -225,8 +225,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total non-synthetic: 632\n"
+     ]
+    }
+   ],
    "source": [
     "#Creating testset, using the non-synthetic sets, and checking if they occur in the train set of rebel\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -244,10 +266,12 @@
     "total = pd.concat([enables, intends, prevents, causes]).reset_index()\n",
     "total = total[total['label'] != '0']\n",
     "total = total.drop(['index', 'Unnamed: 0.1', 'Unnamed: 0', 'tag'], axis=1)\n",
-    "total.to_csv('Data/rebel_v2/data/rebel_merged_non_synthetic.csv')\n",
+    "print(f\"Total non-synthetic: {len(total)}\")\n",
+    "\n",
+    "#total.to_csv('Data/rebel_v2/data/rebel_merged_non_synthetic.csv')\n",
     "\n",
     "rest_data, test_data = train_test_split(total, test_size=0.15, random_state=1, shuffle=True)\n",
-    "test_data.to_csv('Data/rebel_v2/data/new_split/test.csv')"
+    "#test_data.to_csv('Data/rebel_v2/data/new_split/test.csv')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -259,22 +283,60 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "cause      283\nintend     137\nenable     118\nprevent     94\nName: label, dtype: int64"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total['label'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instances - Enable: 455 - Prevent: 553 - Intend: 478\n",
+      "Total synthetic: 1486\n",
+      "Total before drop: 2023\n",
+      "Total after drop: 2001\n"
+     ]
+    }
+   ],
    "source": [
     "enables = pd.read_csv('Data/rebel_v2/data/enables.csv')\n",
     "intends = pd.read_csv('Data/rebel_v2/data/intends.csv')\n",
     "prevents = pd.read_csv('Data/rebel_v2/data/prevents.csv')\n",
+    "print(f\"Instances - Enable: {len(enables)} - Prevent: {len(prevents)} - Intend: {len(intends)}\")\n",
     "#Cause is the same dataset as loaded above\n",
     "#causes = causes.rename(columns={\"sentece\": \"sentence\", \"trigger_1\": \"trigger1\", \"trigger_2\": \"trigger2\"})\n",
+    "print(f\"Total synthetic: {len(pd.concat([enables, intends, prevents]).reset_index(drop=True))}\")\n",
     "\n",
     "total = pd.concat([rest_data, enables, intends, prevents]).reset_index(drop=True)\n",
+    "print(f\"Total before drop: {len(total)}\")\n",
     "total = total.drop(['Unnamed: 0.1', 'Unnamed: 0', 'tag'], axis= 1).drop_duplicates()\n",
     "total = total[total['label'] != '0']\n",
+    "print(f\"Total after drop: {len(total)}\")\n",
     "\n",
-    "total.to_csv('Data/rebel_v2/data/new_split/train_val_combined.csv')\n",
-    "train_data, val_data = train_test_split(total, test_size=0.1, shuffle=True)\n",
-    "train_data.to_csv('Data/rebel_v2/data/new_split/train.csv')\n",
-    "val_data.to_csv('Data/rebel_v2/data/new_split/val.csv')"
+    "#total.to_csv('Data/rebel_v2/data/new_split/train_val_combined.csv')\n",
+    "#train_data, val_data = train_test_split(total, test_size=0.1, shuffle=True)\n",
+    "#train_data.to_csv('Data/rebel_v2/data/new_split/train.csv')\n",
+    "#val_data.to_csv('Data/rebel_v2/data/new_split/val.csv')\n"
    ],
    "metadata": {
     "collapsed": false,
