Updated code for statistics. Moved some code, swapped subject and object for generating jointGT data

--- a/get_statistics.ipynb
+++ b/get_statistics.ipynb
@@ -1807,6 +1807,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "reduce       6\nreap         2\nlost         2\nrecycling    2\nbrake        2\n            ..\nfamine       1\nbanned       1\nwonder       1\nbid          1\ncarry        1\nName: trigger2, Length: 82, dtype: int64"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Are the subject and object in the data relatively unique?\n",
+    "import pandas as pd\n",
+    "\n",
+    "test_data = pd.read_csv('Data/rebel_v2/data/new_split/test.csv')\n",
+    "test_data['trigger2'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
