--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -639,10 +639,11 @@
     "# Get all the ID's for the subject from the original data\n",
     "from resources import MappingDict\n",
     "import json\n",
-    "\n",
+    "\"\"\"\n",
     "def gen_mapping_dict(*args):\n",
     "    total_instances = 0\n",
     "    \"\"\"\n",
+    "    This function generates a dictionary containing all the unique keys for the objects in the JointGT files\n",
     "    :param args: paths to the jointGT files\n",
     "    :return: the mapping dictionary\n",
     "    \"\"\"\n",
@@ -660,7 +661,8 @@
     "    encoding_dict = MappingDict(encoding_dict)\n",
     "    print(f\"Processed {total_instances} instances\")\n",
     "\n",
-    "    return encoding_dict, total_instances"
+    "    return encoding_dict, total_instances\n",
+    "\"\"\""
    ],
    "metadata": {
     "collapsed": false,
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -682,6 +684,7 @@
     }
    ],
    "source": [
+    "from resources import gen_mapping_dict\n",
     "encoding_dict, total_instances = gen_mapping_dict('..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\train.json', '..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\val.json', '..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\test.json')"
    ],
    "metadata": {
@@ -693,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import json\n",
@@ -702,7 +705,7 @@
     "\n",
     "def gen_jointgt_input_format(data, output_file, encoding_dict= None, subj_col= 'subject_values', rel_col= 'predicate', obj_col= 'object_values', sent_col = None, single_event = True, start_id = 0):\n",
     "    \"\"\"\n",
-    "\n",
+    "    This function converts a dataset to a format suitable for the jointGT model\n",
     "    :param data: The dataset to process\n",
     "    :param output_file: The name of the output file (.json should be added)\n",
     "    :param encoding_dict: The dictionary containing the encodings for the words\n",
@@ -717,18 +720,22 @@
     "\n",
     "    if encoding_dict == None:\n",
     "        encoding_dict = MappingDict()\n",
-    "        encoding_dict.add_words(data[subj_col].to_list()) #Generate unique ID's per word\n",
+    "        #encoding_dict.add_words(data[subj_col].to_list()) #Generate unique ID's per word (subject)\n",
+    "        encoding_dict.add_words(data[obj_col].to_list()) #Generate unique ID's per word (object)\n",
     "\n",
     "    else:\n",
-    "        encoding_dict.add_words(data[subj_col].to_list())\n",
+    "        #encoding_dict.add_words(data[subj_col].to_list()) #For subject\n",
+    "        encoding_dict.add_words(data[obj_col].to_list()) #For object\n",
     "\n",
     "    full_data = []\n",
     "    kbs = {}\n",
     "    data = data.reset_index(drop=True)\n",
     "    for index, row in data.iterrows():\n",
-    "        subj_id = encoding_dict.encoding_dict[row[subj_col]]\n",
+    "        #subj_id = encoding_dict.encoding_dict[row[subj_col]] #For subject\n",
+    "        obj_id = encoding_dict.encoding_dict[row[obj_col]] #For object\n",
     "        relation = row[rel_col].split('/')[-1]\n",
-    "        kbs[subj_id] = [row[subj_col], row[subj_col], [[relation, str(row[obj_col])]]]\n",
+    "        #kbs[subj_id] = [row[subj_col], row[subj_col], [[relation, str(row[obj_col])]]] #For subject\n",
+    "        kbs[obj_id] = [row[obj_col], row[obj_col], [[relation, str(row[subj_col])]]]\n",
     "\n",
     "        if single_event == False:\n",
     "            json_dict = {\"id\": start_id +index,\n",
@@ -759,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -791,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import json\n",
@@ -807,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "#Next step: Combine both the original WebNLG data with the newly generated one\n",
@@ -831,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "combine_datasets('Data\\\\jointGT\\\\faro\\\\relation_dataset_jointgt_train.json', '..\\\\JointGT\\\\JointGT_data\\\\data\\\\webnlg\\\\train.json', 'Data\\\\jointGT\\\\combined\\\\combined_train.json')\n",
