converting selected triples is now made easier. Also fixed some small errors

--- a/get_statistics.ipynb
+++ b/get_statistics.ipynb
@@ -2747,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -3576,13 +3576,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "country                    2834\nbirth place                1549\nlocation                   1533\nis part of                 1517\nleader name                1505\n                           ... \nfossil                        1\n5th runway surface type       1\nplayer number                 1\nmilitary rank                 1\nchief                         1\nLength: 373, dtype: int64"
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3627,6 +3627,47 @@
     "for word in list(pd.value_counts(predicates).index):\n",
     "    if 'year' in word:\n",
     "        print(word)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "# Find articles that have a broad diversity of relations\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('Data/final_data_with_predictions.csv')\n",
+    "data = data[data['Relation'].isin(['cause', 'enable', 'prevent', 'intend'])]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "URI                                                                 Relation\nhttp://asrael.eurecom.fr/news/001ca68e-a182-361e-988c-c116aa2c1bfc  cause        7\n                                                                    enable       3\nhttp://asrael.eurecom.fr/news/0083b75d-8a2e-30bb-b502-a5887c340ed6  cause       18\n                                                                    enable      11\n                                                                    prevent      2\n                                                                                ..\nhttp://asrael.eurecom.fr/news/ffa5d0de-e572-3153-9241-0903566fd314  enable       1\nhttp://asrael.eurecom.fr/news/ffbcc086-6284-321b-8ff5-9417f532f2b6  cause        9\n                                                                    enable       1\n                                                                    prevent      1\nhttp://asrael.eurecom.fr/news/ffe5f32f-75eb-341e-b943-d7bfc081e81f  cause        6\nName: Relation, Length: 2998, dtype: int64"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby(['URI'])['Relation'].value_counts()"
    ],
    "metadata": {
     "collapsed": false,
