Further adding small updates to code, fixed small bugs

--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -565,16 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<Graph identifier=N610f64bc12104537ac5609c4a87093d7 (<class 'rdflib.graph.Graph'>)>"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "import pandas as pd\n",
@@ -606,11 +597,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "#Extract 4W's from a event\n",
-    "event_uri = \"http://www.wikidata.org/entity/Q104717056\"\n",
+    "event_uri = \"http://www.wikidata.org/entity/Q104705419\"\n",
     "query = \"\"\"\n",
     "SELECT ?event_name ?Time ?place ?actor ?beginTime ?endTime ?timeStamp where {\n",
     "\t?event a  sem:Event;\n",
@@ -651,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "query = \"\"\"\n",
@@ -678,15 +669,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "event_name - [rdflib.term.Literal('Save America March')]\n",
+      "event_name - [rdflib.term.Literal('2021 storming of the United States Capitol')]\n",
       "Time - [rdflib.term.Literal('2021-01-06T00:00:00+00:00', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#dateTime'))]\n",
-      "place - [rdflib.term.Literal('United States of America'), rdflib.term.Literal('Washington, D.C.')]\n"
+      "place - [rdflib.term.Literal('Point(-77.009166666 38.889722222)', datatype=rdflib.term.URIRef('http://www.opengis.net/ont/geosparql#wktLiteral')), rdflib.term.Literal('United States of America'), rdflib.term.Literal('United States Capitol'), rdflib.term.Literal('Washington, D.C.')]\n",
+      "actor - [rdflib.term.Literal('Proud Boys')]\n"
      ]
     }
    ],
@@ -703,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "selected_nodes = {\"mentions\": []}\n",
@@ -736,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "#First, extract all the mentions from the sentences\n",
@@ -769,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "#Now, find the biggest cluster\n",
@@ -799,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "#Find the text values for the clusters\n",
@@ -843,19 +835,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'mentions': [['stormed', 'causes', 'drew'],\n  ['emergencies', 'causes', 'died'],\n  ['measures', 'enables', 'removing']],\n 'event_name': 'Save America March',\n 'Time': '2021-01-06',\n 'place': 'United States of America'}"
+      "text/plain": "{'mentions': [['addressed', 'causes', 'stormed'],\n  ['died', 'causes', 'shot'],\n  ['measures', 'enables', 'removing']],\n 'event_name': '2021 storming of the United States Capitol',\n 'Time': '2021-01-06',\n 'place': 'United States of America',\n 'actor': 'Proud Boys'}"
      },
-     "execution_count": 108,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "selected_nodes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 5 instances\n"
+     ]
+    }
+   ],
+   "source": [
+    "from resources import gen_mapping_dict\n",
+    "mapping_dict, _ = gen_mapping_dict('Data/jointGT/events/events_combined.json')"
    ],
    "metadata": {
     "collapsed": false,
@@ -879,21 +894,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 35,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 5 instances\n"
-     ]
+     "data": {
+      "text/plain": "<module 'resources' from 'C:\\\\Users\\\\mike-\\\\Documents\\\\VU\\\\Eurecom\\\\KG_mapping\\\\resources.py'>"
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from resources import convert_selected_triples_to_jointgt\n",
-    "import os\n",
-    "output_path = os.path.join(\"Data/jointGT/events/\", selected_nodes['event_name'].replace(\" \", \"_\"))\n",
-    "convert_selected_triples_to_jointgt(selected_nodes, output_path + '.json')"
+    "import sys, importlib\n",
+    "importlib.reload(sys.modules['resources'])"
    ],
    "metadata": {
     "collapsed": false,
@@ -904,18 +918,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data/jointGT/events/2021_Sundance_Film_Festival\\.json\n"
+      "Processed 6 instances\n"
      ]
     }
    ],
    "source": [
-    "print(output_path)"
+    "from resources import convert_selected_triples_to_jointgt\n",
+    "import os\n",
+    "output_path = os.path.join(\"Data/jointGT/events/\", selected_nodes['event_name'].replace(\" \", \"_\"))\n",
+    "convert_selected_triples_to_jointgt(selected_nodes, output_path + '.json', mapping_dict)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1001,13 +1018,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 14 instances\n"
+      "Processed 31 instances\n"
      ]
     }
    ],
@@ -1018,66 +1035,42 @@
     "import pandas as pd\n",
     "from resources import gen_jointgt_input_format_multiple\n",
     "\n",
-    "tuples1 = (\n",
-    "    (\"Sundace Film Festival\", \"begin date\", \"2021-01-20\", 0), (\"Sundace Film Festival\", \"end date\", \"2021-02-03\", 0), (\"Sundace Film Festival\", \"country\", \"United States\", 0),\n",
+    "#Note: The tuple (\"western sanctions\", \"prevent\", \"scientific and technological progress of Iran\"), (\"enemies' maximum pressure\", \"prevent\", \"scientific and technological progress of Iran\"), is not really prevent, just kept it in for showing the result on this relation.\n",
     "\n",
-    "    (\"Sundance Film Festival\", \"was delayed by\", \"pandemic\", 1), (\"pandemic\", \"has prevented\", \"physical attendance\", 1), (\"pandemic\", \"has caused\", \"online event\", 1),\n",
+    "tuples_data = (\n",
+    "            (\"Russia\", \"launch\", \"satellite\", 0), (\"launch\", \"location\", \"Kazakhstan\", 0), (\"launch\", \"time\", \"Tuesday\", 0), (\"satellite\", \"enable\", \"military surveillance\", 0),\n",
     "\n",
-    "    (\"Sundance Film Festival\", \"was delayed by\", \"pandemic\", 2), (\"pandemic\", \"prevent\", \"physical attendance\", 2), (\"pandemic\", \"cause\", \"online event\", 2),\n",
+    "               (\"Russia\", \"cause\", \"invasion of Ukraine\", 1), (\"invasion of Ukraine\", \"cause\", \"western sanctions\", 1), (\"western sanctions\", \"cause\", \"Russia's international isolation\", 1), (\"Russia\", \"intend\", \"find new clients\", 1),\n",
     "\n",
-    "    (\"Sundance Film Festival\", \"attendees\", \"200\", 3), (\"Sundance Film Festival\", \"has enabled\", \"many publication\", 3), (\"Sundance Film Festival\", \"has caused\", \"much criticism\", 3), (\"Sundance Film Festival\", \"genre\", \"summer vibes\", 3),\n",
+    "               (\"Russian-Iranian bilateral cooperation\", \"enable\", \"implementation of new and even larger projects\", 2),\n",
     "\n",
-    "    (\"The company\", \"prevented\", \"sales of second-hand phones\", 4), (\"The company\", \"intended\", \"increase profits\", 4),\n",
+    "               (\"Russia\", \"launch\", \"satellite\", 3), (\"Iran\", \"launch\", \"satellite\", 3), (\"satellite\", \"enable\", \"a turning point for the start of a new interaction\", 3),\n",
     "\n",
-    "    (\"The company\", \"has prevented\", \"sales of second-hand phones\", 5), (\"The company\", \"has intention\", \"increase profits\", 5),\n",
+    "               (\"western sanctions\", \"prevent\", \"scientific and technological progress of Iran\", 4), (\"enemies' maximum pressure\", \"prevent\", \"scientific and technological progress of Iran\", 4),\n",
     "\n",
-    "    (\"The company\", \"prevent\", \"sales of second-hand phones\", 6), (\"The company\", \"intend\", \"increase profits\", 6),\n",
+    "               (\"satellite\", \"enable\", \"spy\", 5),\n",
     "\n",
-    "    (\"The United Nations\", \"implemented\", \"law\", 7), (\"law\", \"cause\", \"anger\", 7),\n",
+    "               (\"Russia's growing cooperation with Iran\", \"cause\", \"profound threat\", 6),\n",
     "\n",
+    "               (\"Iran\", \"controls\", \"satellite\", 7), (\"controls\", \"time\", \"from day one\", 7),\n",
+    "\n",
+    "               (\"satellite\", \"enable\", \"information\", 8), (\"third countries\", \"intend\", \"access information\", 8), (\"encrypted algorithm\", \"prevent\", \"access information\", 8), (\"satellite\", \"has\", \"encrypted algorithm\", 8),\n",
+    "\n",
+    "               (\"Iran\", \"intend\", \"salvage 2015 deal\", 9), (\"2015 deal\", \"prevent\", \"Iran's nuclear ambitions\", 9),\n",
+    "\n",
+    "               (\"satellite\", \"contains\", \"ballistic missle technologies\", 10), (\"ballistic missle technologies\", \"enable\", \"delivery of nuclear warhead\", 10),\n",
+    "\n",
+    "               (\"Iran\", \"launch\", \"first military satellite\", 11), (\"first military satellite\", \"cause\", \"sharp rebuke from the United States\", 11),\n",
+    "\n",
+    "               (\"tensions with the West\", \"cause\", \"difficult situation\", 12),\n",
+    "\n",
+    "               (\"invasion of Ukraine\", \"cause\", \"tensions with the West\", 13), (\"tensions with the West\", \"cause\", \"difficult situation\", 13),\n",
     ")\n",
     "\n",
-    "#Create example of pretrained predicates\n",
-    "tuples2 = ((\"Eurecom\", \"location\", \"Sophia Antipolis\", 0), (\"Eurecom\", \"country\", \"France\", 0), (\"Eurecom\", \"region\", \"French Riviera\", 0),\n",
-    "           (\"Eurecom\", \"established\", \"1991\", 0), (\"Eurecom\", \"director\", \"David Gesbert\", 0), (\"Eurecom\", \"number of students\", \"500\", 0),\n",
-    "           (\"Eurecom\", \"parent company\", \"Institut Mines-Telecom\", 0), (\"Eurecom\", \"number of postgraduate students\", \"70\", 0),\n",
     "\n",
-    "           (\"Eurecom\", \"location\", \"Sophia Antipolis\", 1), (\"Eurecom\", \"director\", \"David Gesbert\" , 1), (\"MIMO paper\", \"author\", \"David Gesbert\", 1),\n",
-    "           (\"Eurecom\", \"parent company\", \"Institut Mines-Telecom\", 1), (\"Institut Mines-Telecom\", \"city\", \"paris\" , 1), (\"Eurecom\", \"founder\", \"Telecom Paris\", 1),\n",
-    "           (\"Eurecom\", \"founder\", \"EPFL\",1),\n",
+    "created_dataset = pd.DataFrame(tuples_data, columns =['subject_values', 'predicate', 'object_values', 'instance'])\n",
     "\n",
-    "           (\"She\", \"intend\", \"drive safe\", 2), (\"reckless driving\", \"cause\", \"accident\", 2), (\"drive safe\", \"prevent\", \"accident\", 2),\n",
-    "\n",
-    "           (\"She\", \"intended\", \"drive safe\", 3), (\"reckless driving\", \"was the cause of\", \"accident\", 3), (\"drive safe\", \"could have prevented\", \"accident\", 3),\n",
-    "\n",
-    "           (\"New technology\", \"intend\", \"better communication\", 4), (\"New technology\", \"enable\", \"war machine\", 4),\n",
-    "\n",
-    "           (\"New technology\", \"was intended to\", \"better communication\", 5), (\"New technology\", \"enabled\", \"war machine\", 5),\n",
-    "\n",
-    "           (\"reforms\", \"intend\", \"promote public health\", 6), (\"reforms\", \"intend\", \"reduce spread of disease\", 6),\n",
-    "\n",
-    "           (\"reforms\", \"has intention\", \"promote public health\", 7), (\"reforms\", \"has intention\", \"reduce spread of disease\", 7),\n",
-    "\n",
-    "           (\"measures\", \"prevent\", \"corruption\", 8), (\"measures\", \"prevent\", \"illegal actions\", 8),\n",
-    "\n",
-    "           (\"measures\", \"has prevented\", \"corruption\", 9), (\"measures\", \"has prevented\", \"illegal actions\", 9)\n",
-    "\n",
-    ")\n",
-    "\n",
-    "tuples3 = ((\"measures\", \"prevent\", \"corruption\", 0), (\"corruption\", \"cause\", \"instability\", 0),\n",
-    "\n",
-    "            (\"The organisation\", \"implemented\", \"measures\", 1), (\"measures\", \"prevent\", \"corruption\", 1), (\"corruption\", \"cause\", \"instability\", 1),\n",
-    "\n",
-    "           (\"The organisation\", \"implemented\", \"measures\", 2), (\"measures\", \"has prevented\", \"corruption\", 2), (\"corruption\", \"causes\", \"instability\", 2),\n",
-    "\n",
-    "           (\"2021 Sundance Festival\", \"country\", \"United States\", 3), (\"Covid-19 pandemic\", \"cause\", \"online streaming\", 3), (\"nominations\", \"enable\", \"recognition\", 3),\n",
-    "\n",
-    "           (\"2021 Sundance Festival\", \"country\", \"United States\", 4), (\"Covid-19 pandemic\", \"has caused\", \"online streaming\", 4), (\"nominations\", \"has enabled\", \"recognition\", 4)\n",
-    "           )\n",
-    "\n",
-    "created_dataset = pd.DataFrame(tuples3, columns =['subject_values', 'predicate', 'object_values', 'instance'])\n",
-    "\n",
-    "total_instances = gen_jointgt_input_format_multiple(created_dataset, 'Data/jointGT/manual_generated_for_test/test11.json')"
+    "total_instances = gen_jointgt_input_format_multiple(created_dataset, 'Data/jointGT/manual_generated_for_test/article3.json')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1088,8 +1081,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done and saved\n"
+     ]
+    }
+   ],
    "source": [
     "from resources import combine_jointgt_events\n",
     "import os\n",
